--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
 services:
   kafka:
     image: landoop/fast-data-dev:latest
-    container_name: kafka
     environment:
       - ADV_HOST=127.0.0.1
       - SAMPLEDATA=0
@@ -17,3 +16,23 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
+    depends_on:
+      - mysql
+
+  mysql:
+    image: mysql:8
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ROOT_PASSWORD: Password!@
+    ports:
+      - 3306:3306
+    volumes:
+      - "./mysql/schema.sql:/docker-entrypoint-initdb.d/1.sql"
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - 7080:80
+    environment:
+      PMA_HOSTS: mysql
+    depends_on:
+      - mysql
